--- a/myblog/blog/templates/index.html
+++ b/myblog/blog/templates/index.html
@@ -3,8 +3,8 @@
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
 {% block content %}
-  <h1>Blog Home</h1>
-  <p>Welcome to My Blog, a website developed by <em>Sushant Das</em>!</p>
+  <h1>New Blog Home</h1>
+  <p>Welcome to My Blog, a website developed by <em>Klarify Inc</em>!</p>
   <h2>Blog Details</h2>
   <p>The Blog has the following record counts:</p>
   <ul>
