--- a/myblog/blog/templates/blog/blog_list.html
+++ b/myblog/blog/templates/blog/blog_list.html
@@ -6,7 +6,7 @@
   <ul>
     {% for blog in blog_list %}
       <li>
-        <a href="{{ blog.get_absolute_url }}">{{ blog.title }}</a> ({{blog.blogger}})
+        <a href="{{ blog.get_absolute_url }}">{{ blog.title }}</a> <a href="{{ blog.get_absolute_url }}">{{ blog.blogger }}</a>
       </li>
     {% endfor %}
   </ul>
