--- a/myblog/blog/templates/index.html
+++ b/myblog/blog/templates/index.html
@@ -12,4 +12,6 @@
     
     <li><strong>Bloggers:</strong> {{ num_bloggers }}</li>
   </ul>
+
+  <p>You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.</p>
 {% endblock %}
