Added images in the blogs

--- a/myblog/blog/templates/blog/blog_detail.html
+++ b/myblog/blog/templates/blog/blog_detail.html
@@ -2,6 +2,7 @@
 
 {% block content %}
   <h1>Title: {{ blog.title }}</h1>
+  <img src= "media/{{blog.img}}" width="1000" height="600"> 
 
   <p><strong>Blogger:</strong> <a href="">{{ blog.blogger }}</a></p> 
   <p><strong>Content:</strong> {{ blog.content }}</p>
