Added the admin edit feature

--- a/myblog/blog/templates/blog/blog_detail.html
+++ b/myblog/blog/templates/blog/blog_detail.html
@@ -5,7 +5,7 @@
   <img src= "media/{{blog.img}}" width="1000" height="600"> 
 
   <p><strong>Blogger:</strong> <a href="">{{ blog.blogger }}</a></p> 
-  <p><strong>Content:</strong> {{ blog.content }}</p>
+  <p><strong></strong> {{ blog.content }}</p>
   <p><strong>Category:</strong> {{ blog.category.all|join:", "}}</p>
   <p><strong>Comments:</strong> {{ blog.comments }}</p>
 
