--- a/myblog/blog/static/css/styles.css
+++ b/myblog/blog/static/css/styles.css
@@ -7,15 +7,15 @@
 .heading {
     position: absolute;
     font-family: arial;
-    font-size: 1.5rem;
+    font-size: 4rem;
     top: 8px;
-    left: 16px;
-    color: red;
+    left: 25px;
+    color: white;
   }
 
 
 .sidebar-nav {
-    margin-top: 20px;
+    margin-top: 15px;
     padding: 0;
     list-style: none;
 }
